force-app/main/default/objects/R360_Resource_Unavailability__c/R360_Resource_Unavailability__c.object-meta.xml
<CustomObject>
    <description>Approved leave, training and other capacity-reducing windows used by staffing and forecasting.</description>
    <label>Resource Unavailability</label>
    <nameField><displayFormat>UNA-{000000}</displayFormat><label>Resource Unavailability Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField>
    <pluralLabel>Resource Unavailability</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>