force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Approved_At__c.field-meta.xml
<CustomField><fullName>Approved_At__c</fullName><description>Approval timestamp.</description><label>Approved At</label><trackHistory>false</trackHistory><type>DateTime</type></CustomField>