force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Approved_By__c.field-meta.xml
<CustomField><fullName>Approved_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>Attributable approving user.</description><label>Approved By</label><referenceTo>User</referenceTo><relationshipLabel>Approved Unavailability</relationshipLabel><relationshipName>Approved_Unavailability</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></CustomField>