force-app/main/default/objects/R360_Resource_Unavailability__c/fields/End_Date__c.field-meta.xml
<CustomField><fullName>End_Date__c</fullName><description>Inclusive effective end date.</description><label>End Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>