force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Hours_Per_Day__c.field-meta.xml
<CustomField><fullName>Hours_Per_Day__c</fullName><description>Daily hours removed from standard capacity during the window.</description><label>Hours per Day</label><precision>4</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>