force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Reason__c.field-meta.xml
<CustomField><fullName>Reason__c</fullName><description>Non-sensitive operational reason or source note.</description><label>Reason</label><length>1000</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>