force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Resource__c.field-meta.xml
<CustomField><fullName>Resource__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>Resource whose standard availability is reduced.</description><label>Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Unavailability</relationshipLabel><relationshipName>Unavailability</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></CustomField>