force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Source_Last_Sync__c.field-meta.xml
<CustomField><fullName>Source_Last_Sync__c</fullName><description>Latest source synchronization timestamp.</description><label>Source Last Sync</label><trackHistory>false</trackHistory><type>DateTime</type></CustomField>