force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Source_System__c.field-meta.xml
<CustomField><fullName>Source_System__c</fullName><description>Approved mock or production system of record.</description><label>Source System</label><length>80</length><trackHistory>false</trackHistory><type>Text</type></CustomField>