force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Start_Date__c.field-meta.xml
<CustomField><fullName>Start_Date__c</fullName><description>Inclusive effective start date.</description><label>Start Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>