force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Type__c.field-meta.xml
<CustomField><fullName>Type__c</fullName><description>Capacity-reducing event type.</description><label>Type</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Leave</fullName><default>false</default><label>Leave</label></value><value><fullName>PTO</fullName><default>false</default><label>PTO</label></value><value><fullName>Training</fullName><default>false</default><label>Training</label></value><value><fullName>Holiday Override</fullName><default>false</default><label>Holiday Override</label></value><value><fullName>Medical</fullName><default>false</default><label>Medical</label></value><value><fullName>Other</fullName><default>false</default><label>Other</label></value></valueSetDefinition></valueSet></CustomField>