force-app/main/default/objects/R360_Resource_Unavailability__c/fields/Unavailability_Key__c.field-meta.xml
<CustomField><fullName>Unavailability_Key__c</fullName><description>Stable idempotency key from the approved source.</description><label>Unavailability Key</label><length>100</length><externalId>true</externalId><required>true</required><unique>true</unique><trackHistory>false</trackHistory><type>Text</type></CustomField>